--- a/ComePenny/app/src/main/res/layout/activity_idea_detail_header.xml
+++ b/ComePenny/app/src/main/res/layout/activity_idea_detail_header.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/layout_bg"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginTop="10dp"
-    android:background="#ffffff"
     android:orientation="vertical"
 
     >
@@ -122,23 +122,21 @@
                                 android:textSize="11dp" />
 
 
-
-
-
                         </LinearLayout>
 
 
                     </LinearLayout>
                 </LinearLayout>
+
                 <com.enterpaper.comepenny.util.CircularImageView
+                    android:id="@+id/iv_boothicon"
                     android:layout_width="65dp"
                     android:layout_height="65dp"
+                    android:layout_alignParentRight="true"
                     android:layout_gravity="center"
-                    android:paddingRight="6dp"
-                    android:layout_marginTop="12dp"
                     android:layout_marginRight="10dp"
-                    android:id="@+id/iv_boothicon"
-                    android:layout_alignParentRight="true"/>
+                    android:layout_marginTop="12dp"
+                    android:paddingRight="6dp" />
 
 
             </RelativeLayout>
@@ -149,23 +147,25 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:src="@drawable/line" />
+
             <LinearLayout
-                android:id="@+id/layout_capture"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-            <TextView
-                android:id="@+id/tv_ideaoriginal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="15dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginTop="14dp"
-                android:lineSpacingExtra="13dp"
-                android:paddingBottom="31dp"
-                android:text=""
-                android:textColor="#313131"
-                android:textSize="15dp" />
+                android:id="@+id/layout_write_bg">
+
+                <TextView
+                    android:id="@+id/tv_ideaoriginal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="15dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginTop="14dp"
+                    android:lineSpacingExtra="13dp"
+                    android:paddingBottom="31dp"
+                    android:text=""
+                    android:textColor="#313131"
+                    android:textSize="15dp" />
             </LinearLayout>
 
             <ImageButton
@@ -216,22 +216,24 @@
                     android:text="수정/삭제"
                     android:textColor="#959595"
                     android:textSize="11dp"
-                    android:visibility="invisible"/>
+                    android:visibility="invisible" />
             </RelativeLayout>
+
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:src="@drawable/line"
-                android:layout_marginBottom="10dp"/>
+                android:layout_marginBottom="10dp"
+                android:src="@drawable/line" />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
-                android:orientation="horizontal"
                 android:layout_marginBottom="10dp"
                 android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp">
+                android:layout_marginRight="10dp"
+                android:orientation="horizontal">
 
 
                 <EditText
@@ -241,22 +243,21 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:layout_weight="10"
-                    android:textColorHint="#b6b6b6"
                     android:background="@null"
                     android:hint="댓글달기..."
-                    android:textSize="13dp"
-                    android:maxLines="20"/>
+                    android:maxLines="20"
+                    android:textColorHint="#b6b6b6"
+                    android:textSize="13dp" />
 
                 <TextView
                     android:id="@+id/btn_reple"
                     android:layout_width="0dp"
                     android:layout_height="20dp"
                     android:layout_gravity="center_vertical"
+                    android:layout_weight="1"
                     android:text="작성"
                     android:textColor="#535353"
-                    android:textSize="16dp"
-                    android:layout_weight="1"
-                    />
+                    android:textSize="16dp" />
             </LinearLayout>
 
 
