--- a/ComePenny/app/src/main/res/layout/row_idea.xml
+++ b/ComePenny/app/src/main/res/layout/row_idea.xml
@@ -66,6 +66,7 @@
                     android:paddingBottom="13dp"
                     android:textSize="15dp"
                     android:textStyle="normal"
+                    android:layout_marginLeft="3dp"
                    />
 
                 <ImageView
@@ -84,17 +85,18 @@
                     android:layout_marginRight="6dp"
                     android:gravity="right">
 
-                    <!--
+
                     <TextView
+                        android:id="@+id/tv_row_booth_name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="left"
                         android:layout_weight="1"
                         android:paddingLeft="9dp"
-                        android:text="Homo Erectus"
+                        android:text=""
                         android:textColor="#29c5e4"
                         android:textSize="13dp" />
-                        -->
+
 
                     <LinearLayout
                         android:layout_width="wrap_content"
@@ -146,7 +148,7 @@
             </LinearLayout>
 
         </LinearLayout>
-
+        <!--
         <com.enterpaper.comepenny.util.CircularImageView
             android:id="@+id/iv_company"
             android:layout_width="40dp"
@@ -157,7 +159,7 @@
             android:layout_marginRight="5dp"
 
             android:src="@drawable/ex11" />
-
+            -->
 
     </RelativeLayout>
 </LinearLayout>
