--- a/ComePenny/app/src/main/res/layout/fragment_idea.xml
+++ b/ComePenny/app/src/main/res/layout/fragment_idea.xml
@@ -13,6 +13,7 @@
         android:divider="#00000000"
         android:listSelector="@android:color/transparent"
         android:paddingTop="4dp"
+        android:scrollbars="none"
         />
 
     <com.melnykov.fab.FloatingActionButton
