공유하기구현중(카카오톡전송만되는상태)

--- a/ComePenny/app/src/main/res/layout/activity_idea_detail.xml
+++ b/ComePenny/app/src/main/res/layout/activity_idea_detail.xml
@@ -39,7 +39,7 @@
                 android:textColor="#ffffff"
                 android:textSize="20dp" />
 
-          <!--  <TextView
+            <TextView
                 android:id="@+id/btn_share"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -48,7 +48,6 @@
                 android:text="공유"
                 android:textColor="#ffffff"
                 android:textSize="15dp" />
-                -->
 
         </android.support.v7.widget.Toolbar>
     </RelativeLayout>
