--- a/ComePenny/app/src/main/res/layout/row_idea.xml
+++ b/ComePenny/app/src/main/res/layout/row_idea.xml
@@ -130,7 +130,7 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="like : "
+                            android:text="pick : "
                             android:textColor="#959595"
 
                             android:textSize="12sp" />
