--- a/ComePenny/app/src/main/res/layout/row_idea.xml
+++ b/ComePenny/app/src/main/res/layout/row_idea.xml
@@ -116,7 +116,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginRight="12dp"
-                            android:text="231234"
+                            android:text=""
                             android:textSize="12sp" />
 
                     </LinearLayout>
@@ -139,7 +139,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginRight="12dp"
-                            android:text="231234"
+                            android:text=""
                             android:textSize="12sp" />
 
                     </LinearLayout>
@@ -162,8 +162,7 @@
                             android:id="@+id/tv_count_like"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="1234"
-
+                            android:text=""
                             android:textSize="12sp" />
 
                     </LinearLayout>
