--- a/ComePenny/app/src/main/res/layout/activity_adjustwrite.xml
+++ b/ComePenny/app/src/main/res/layout/activity_adjustwrite.xml
@@ -56,19 +56,21 @@
         <LinearLayout
             android:id="@+id/write_top_layout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginTop="10dp"
+            android:background="#ffffff">
 
             <EditText
                 android:id="@+id/edit_content"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginBottom="10dp"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="5dp"
-                android:layout_marginTop="10dp"
+                android:paddingTop="10dp"
                 android:background="#ffffff"
-                android:gravity="top"
-                android:hint=" 당신의 특별한 글을 적어보세요."
+                android:gravity="center_horizontal"
+                android:hint="당신의 특별한 글을 적어보세요."
                 android:textColor="#000000"
                 android:textColorHint="#b6b6b6"
                 android:textSize="15dp" />
