line정리, 텍스트 공유받기 구현

--- a/ComePenny/app/src/main/res/layout/activity_setting.xml
+++ b/ComePenny/app/src/main/res/layout/activity_setting.xml
@@ -64,9 +64,10 @@
         </LinearLayout>
 
         <ImageView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:src="@drawable/setting_divideline" />
+            android:layout_gravity="center"
+            android:background="@drawable/setting_divideline" />
 
         <LinearLayout
             android:id="@+id/btn_version"
