--- a/ComePenny/app/src/main/res/layout/activity_myinfo.xml
+++ b/ComePenny/app/src/main/res/layout/activity_myinfo.xml
@@ -82,9 +82,10 @@
 
             <ImageView
                 android:id="@+id/myInfo_divideline"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:src="@drawable/myinfo_divideline" />
+                android:layout_gravity="center"
+                android:background="@drawable/myinfo_divideline" />
 
 
             <com.astuetz.PagerSlidingTabStrip
