--- a/ComePenny/app/src/main/res/layout/activity_idea_detail_header.xml
+++ b/ComePenny/app/src/main/res/layout/activity_idea_detail_header.xml
@@ -137,23 +137,37 @@
                 android:id="@+id/layout_write_bg"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-
                 android:background="#ffffff"
+                android:paddingBottom="15dp"
                 android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/tv_ideaoriginal"
-                    android:layout_marginBottom="15dp"
-                    android:layout_marginLeft="15dp"
-                    android:layout_marginRight="15dp"
-                    android:layout_marginTop="20dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginRight="15dp"
                     android:gravity="center_horizontal"
                     android:lineSpacingExtra="13dp"
                     android:text=""
                     android:textColor="#313131"
                     android:textSize="15dp" />
+
+                <TextView
+                    android:id="@+id/tv_test"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="13dp"
+
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginRight="15dp"
+                    android:gravity="right"
+                    android:text="HomoThinkus  "
+                    android:textColor="#959595"
+                    android:textSize="13dp"
+                    android:visibility="invisible"
+                    />
 
             </LinearLayout>
 
