--- a/ComePenny/app/src/main/res/layout/app_widget_main.xml
+++ b/ComePenny/app/src/main/res/layout/app_widget_main.xml
@@ -1,19 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
+    android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginTop="2dp"
     android:layout_marginLeft="2dp"
     >
-    <ImageView
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:background="@drawable/food"
-        android:layout_gravity="center"/>
 
     <TextView
         android:id="@+id/main_widget_tv_content"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="6dp"
         android:textSize="22dp"
