--- a/ComePenny/app/src/main/res/layout/activity_idea_detail_header.xml
+++ b/ComePenny/app/src/main/res/layout/activity_idea_detail_header.xml
@@ -137,47 +137,58 @@
                 android:id="@+id/layout_write_bg"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="#ffffff"
-                android:paddingBottom="15dp"
                 android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/tv_ideaoriginal"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
                     android:layout_marginLeft="15dp"
                     android:layout_marginRight="15dp"
+                    android:layout_marginTop="20dp"
                     android:gravity="center_horizontal"
-                    android:lineSpacingExtra="13dp"
+                    android:lineSpacingExtra="10dp"
                     android:text=""
                     android:textColor="#313131"
                     android:textSize="15dp" />
 
-                <TextView
-                    android:id="@+id/tv_test"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="13dp"
-
+                <ImageView
+                    android:id="@+id/logo_capture"
+                    android:layout_width="75dp"
+                    android:layout_height="25dp"
+                    android:layout_gravity="right"
+                    android:layout_marginBottom="10dp"
                     android:layout_marginLeft="15dp"
                     android:layout_marginRight="15dp"
-                    android:gravity="right"
-                    android:text="HomoThinkus  "
-                    android:textColor="#959595"
-                    android:textSize="13dp"
+                    android:background="@drawable/logo1"
                     android:visibility="invisible"
+
                     />
 
             </LinearLayout>
 
-            <ImageButton
-                android:id="@+id/btn_pick"
-                android:layout_width="56dp"
-                android:layout_height="31dp"
-                android:layout_gravity="center"
-                android:layout_marginBottom="16dp"
-                android:background="@drawable/detail_pickbutton_before" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left"
+                android:orientation="horizontal"
+                android:layout_marginBottom="10dp"
+                >
+
+                <ImageButton
+                    android:id="@+id/btn_share"
+                    android:layout_width="33dp"
+                    android:layout_height="33dp"
+                    android:layout_marginLeft="12dp"
+                    android:background="@drawable/share" />
+
+                <ImageButton
+                    android:id="@+id/btn_pick"
+                    android:layout_width="33dp"
+                    android:layout_height="33dp"
+                    android:layout_marginLeft="8dp"
+                    android:background="@drawable/detail_pickbutton_before" />
+            </LinearLayout>
 
             <RelativeLayout
                 android:layout_width="match_parent"
