--- a/ComePenny/app/src/main/res/layout/row_booth.xml
+++ b/ComePenny/app/src/main/res/layout/row_booth.xml
@@ -12,14 +12,14 @@
         android:layout_height="174dp"
         android:scaleType="centerCrop" />
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="58dp"
         android:layout_height="24dp"
-        android:layout_marginLeft="54dp"
-        android:layout_marginTop="71dp"
-        android:background="#A6000000"
+
+        android:background="#BF000000"
         android:gravity="center"
-       >
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true">
 
         <TextView
             android:layout_width="wrap_content"
@@ -27,8 +27,9 @@
             android:id="@+id/tv_name"
             android:text=""
             android:textSize="15dp"
-            android:textColor="#ffffff"/>
-    </LinearLayout>
+            android:textColor="#ffffff"
+            android:gravity="center_horizontal"/>
+    </RelativeLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
