--- a/ComePenny/app/src/main/res/layout/row_idea_popular.xml
+++ b/ComePenny/app/src/main/res/layout/row_idea_popular.xml
@@ -22,14 +22,14 @@
                 android:layout_width="167dp"
                 android:layout_height="167dp"
                 android:id="@+id/recycle_image"/>
-            <LinearLayout
+            <RelativeLayout
                 android:layout_width="58dp"
                 android:layout_height="24dp"
-                android:layout_marginLeft="54dp"
-                android:layout_marginTop="71dp"
+
                 android:background="#BF000000"
                 android:gravity="center"
-                >
+                android:layout_centerVertical="true"
+                android:layout_centerHorizontal="true">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -37,10 +37,9 @@
                     android:id="@+id/tv_name"
                     android:text=""
                     android:textSize="15dp"
-                    android:textColor="#ffffff"/>
-            </LinearLayout>
-
-
+                    android:textColor="#ffffff"
+                    android:gravity="center_horizontal"/>
+            </RelativeLayout>
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 
