--- a/ComePenny/app/src/main/res/layout/write_row_booth.xml
+++ b/ComePenny/app/src/main/res/layout/write_row_booth.xml
@@ -15,14 +15,14 @@
         android:id="@+id/img_main_company"
 
        />
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="58dp"
         android:layout_height="24dp"
-        android:layout_marginLeft="54dp"
-        android:layout_marginTop="71dp"
+
         android:background="#BF000000"
         android:gravity="center"
-        >
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true">
 
         <TextView
             android:layout_width="wrap_content"
@@ -30,8 +30,9 @@
             android:id="@+id/tv_name"
             android:text=""
             android:textSize="15dp"
-            android:textColor="#ffffff"/>
-    </LinearLayout>
+            android:textColor="#ffffff"
+            android:gravity="center_horizontal"/>
+    </RelativeLayout>
 
 
 
