--- a/ComePenny/app/src/main/res/layout/activity_setting.xml
+++ b/ComePenny/app/src/main/res/layout/activity_setting.xml
@@ -87,6 +87,7 @@
                 android:textSize="17sp" />
 
             <TextView
+                android:id="@+id/tv_setting_version"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:layout_marginBottom="13dp"
