갖은 버그 해결

--- a/ComePenny/app/src/main/res/values/styles.xml
+++ b/ComePenny/app/src/main/res/values/styles.xml
@@ -5,6 +5,14 @@
         <item name="actionBarSize">0dp</item>
         <item name="contentInsetStart">0dp</item>
         <item name="contentInsetEnd">0dp</item>
+
+        <!-- enable window content transitions -->
+        <item name="android:fitsSystemWindows">true</item>
+
+        <item name="android:windowContentOverlay">@null</item>
+
+        <item name="windowActionBarOverlay">true</item>
+
     </style>
 
 
